2003-03-16  Stefan Petersen  <spe@stacken.kth.se>

	* src/gerber.c: Better sanity checks for angles of arcs, so
	  cw are drawn cw and ccw are drawn ccw. Closes bug #703265
	  which was reported by Mark Whitis. Thanks!

2003-03-10  Stefan Petersen  <spe@stacken.kth.se>

	* src/gerber.c: Doesn't warn anymore if a gerber file requests an
	  image rotate on zero degrees. Reported by Balaji V.

2003-03-02  Stefan Petersen  <spe@stacken.kth.se>

	* src/draw_amacro.c: Aperture macro primitive 1 is a filled circle.
	* Makefile.am, configure.in, src/gerbv.c, src/Makefile.am, 
	  src/gerbv.1.in: Removed all traces of Guile. batch.c is left, but 
	  is not compiled in.

2003-03-01  Stefan Petersen  <spe@stacken.kth.se>

	* src/gerb_image.[hc], gerber.c: Redesigned step-and-repeat
	  parser. And when I was at it I also cleaned up new_gerb_image()
	  a bit.

2003-02-24  Stefan Petersen  <spe@stacken.kth.se>

	* src/Makefile.am,src/gerbv.c,src/gerbv_screen.h,src/log.c,
	  src/setup.[hc]: Added setup to handle all things that can
	  be setup by commandline or (future) rc files. We have the
	  screen variable, but some didn't think it was appropriate
	  to add setup things to.

2003-02-22  Stefan Petersen  <spe@stacken.kth.se>

	* src/gerber.c: Changed comparision if two angles are equal
	  to double since Dan McMahill discovered a case where the difference
	  between the angles were actually less than 0.5 degrees.  
	  Closes bug #689663.

	* src/gerbv.c: I you tried to swap layer with an unused layer 
	  gerbv segfaulted. Also discovered by Dan McMahill. Cudos to him
	  as usual... Closes bug #689667.
	
2003-02-12  Stefan Petersen  <spe@stacken.kth.se>

	* src/gerber.c: A patch from Peter Monta for incremental
	  coordinates. He also discovered that I had made a mistake
	  when parsing incremental/absolute coordinates.

-- Release 0.12 --

2003-02-06  Stefan Petersen  <spe@stacken.kth.se>

	* src/drill.c; Exchanged the last fprintf(stderr, with
	  GERB_COMPILE_ERROR.
